test/fail_compilation/fail9408.d
class C1
{
    invariant() shared
    {
    }
}
